// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render correctly 1`] = `
"<div class=\\"tabs \\"><header><div class=\\"tab  \\" role=\\"button\\"><div class=\\"label\\" style=\\"color: rgb(68, 68, 68);\\">label1<div class=\\"bottom\\" style=\\"background: transparent; height: 8px; width: 100%; border-radius: 4px 4px 0px 0px;\\"></div><style>
      .label{
        padding: 9px 16px;
        border-radius: 4px 4px 0px 0px;
      }
    }
    </style></div></div><div class=\\"tab  \\" role=\\"button\\"><div class=\\"label\\" style=\\"color: rgb(68, 68, 68);\\">label2<div class=\\"bottom\\" style=\\"background: transparent; height: 8px; width: 100%; border-radius: 4px 4px 0px 0px;\\"></div><style>
      .label{
        padding: 9px 16px;
        border-radius: 4px 4px 0px 0px;
      }
    }
    </style></div></div></header><div class=\\"content\\"></div><style>
          .tabs {
            width: initial;
          }

          header {
            display: flex;
            flex-wrap: wrap;
            align-items: center;
          }
          .content {
            padding-top: 0.625rem;
          }

          .tab {
            cursor: pointer;
            outline: 0;
            text-transform: capitalize;
            font-size: 1rem;
            margin: 0 18px;
            user-select: none;
            display: flex;
            align-items: center;
            line-height: 1.25rem;
            position: relative;
            font-variant-numeric: tabular-nums;
          }

          .tab :global(.bottom) {
            position: absolute;
            content: '';
            bottom: -1px;
            left: 0;
            right: 0;
            width: 100%;
            transform: scaleX(0.75);
            transition: transform 200ms ease;
          }

          .tab.active :global(.bottom) {
            transform: scaleX(1);
          }
          .tab:first-of-type {
            margin-left: 0;
          }
        </style></div>"
`;

exports[`Tabs should work correctly with different styles 1`] = `
"<div class=\\"tabs \\"><header><div class=\\"tab  \\" role=\\"button\\"><div class=\\"label\\" style=\\"color: rgb(68, 68, 68);\\">label1<div class=\\"bottom\\" style=\\"background: transparent; height: 8px; width: 100%; border-radius: 4px 4px 0px 0px;\\"></div><style>
      .label{
        padding: 9px 16px;
        border-radius: 4px 4px 0px 0px;
      }
    }
    </style></div></div></header><div class=\\"content\\"></div><style>
          .tabs {
            width: initial;
          }

          header {
            display: flex;
            flex-wrap: wrap;
            align-items: center;
          }
          .content {
            padding-top: 0.625rem;
          }

          .tab {
            cursor: pointer;
            outline: 0;
            text-transform: capitalize;
            font-size: 1rem;
            margin: 0 18px;
            user-select: none;
            display: flex;
            align-items: center;
            line-height: 1.25rem;
            position: relative;
            font-variant-numeric: tabular-nums;
          }

          .tab :global(.bottom) {
            position: absolute;
            content: '';
            bottom: -1px;
            left: 0;
            right: 0;
            width: 100%;
            transform: scaleX(0.75);
            transition: transform 200ms ease;
          }

          .tab.active :global(.bottom) {
            transform: scaleX(1);
          }
          .tab:first-of-type {
            margin-left: 0;
          }
        </style></div>"
`;
